Implementando filtros de consulta de operacoes
